# small-cap-lab

./: .replit  CHANGELOG.md  USER_MANUAL.md  app.py  dark_terminal_styles.py  excel_styles.py  hmm_signal_generator.py  kelly_calculator.py  kelly_calculator_backup_v1.py  pattern_utils.py  pyproject.toml  replit.md  sharpe_calculator.py  small_cap_results_main.csv  small_cap_results_previous.csv  small_cap_screener.py  utils.py  validate_ifo.py
.streamlit/: config.toml
attached_assets/: Pasted--Markov-Chain-Trading-Signal-Generator-Original-Interface-Fixed-Focus-Pure-HMM-Regime-Detect-1753380006562_1753380006563.txt  Pasted--Professional-Sharpe-Ratio-Calculator-Streamlit-Web-Application-import-streamlit-as-s-1753380216592_1753380216592.txt  Pasted-Absolutely-here-s-a-zero-friction-drop-in-Replit-can-add-now-that-expands-your-universe-without-a-he-1761682258678_1761682258679.txt  Pasted-Answers-to-your-questions-1-Initial-universe-source-Option-D-combine-Start-with-my-existing--1761684980450_1761684980451.txt  Pasted-Confirmations-Q1-Initial-population-Infrastructure-only-seed-with-my-90-existing-tickers-I-l-1761686240016_1761686240017.txt  Pasted-Direct-answers-to-each-point-1-Relationship-to-Existing-Small-Cap-Lab-Integrate-as-an-enhanced-tab-1761351622631_1761351622631.txt  Pasted-Final-Answers-to-Replit-Clarifying-Questions-A-D-Line-Initialization-Use-a-rolling-120-day-window--1761669119757_1761669119758.txt  Pasted-Go-Ahead-Decisions-UI-scope-Proceed-with-Option-A-full-UI-integration-now-Add-IFO-columns-to-1761671756577_1761671756578.txt  (+11 more)
config/: ifo.json  ifo.yaml  (+1 more)
(+15 files in other folders)
