[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "pandas-ta>=0.3.14b0",
    "plotly>=6.2.0",
    "scikit-learn>=1.7.1",
    "streamlit>=1.47.0",
    "yfinance>=0.2.65",
]
